# waterflow

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: build_nix.yml  cargo.yml
src/: error.rs  job.rs  job_type.rs  lib.rs  pipeline.rs  pipeline_tree.rs  wasm.rs
tests/: simple.rs
tests/wasm_example/: Cargo.toml
tests/wasm_example/.cargo/: config.toml
tests/wasm_example/src/: lib.rs
waterflow_bindings/: Cargo.toml
waterflow_bindings/src/: lib.rs
waterflow_plugin_interface/: Cargo.toml
waterflow_plugin_interface/src/: lib.rs  prelude.rs
