[package]
name = "waterflow_plugin_interface"
version = "0.1.0"
edition = "2021"

[dependencies]
bypar = { git = "https://gitlab.mglolenstine.xyz/MGlolenstine/bypar.git", branch = "traits", version = "0.1.0", features = ["full"] }
bypar_derive = { git = "https://gitlab.mglolenstine.xyz/MGlolenstine/bypar_derive.git", branch = "switch_to_traits", version = "0.1.0", features = ["full"] }
